cmake_minimum_required (VERSION 3.0)
project (roguelike)

SET (GCC_COMPILE_FLAGS "-std=c++17 -g -ggdb -O0 -pedantic")
SET (GCC_LINK_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lncurses")

SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}" )
SET (CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_LINK_FLAGS}")

SET (CURSES_NEED_NCURSES ON)
FIND_PACKAGE (Curses)
INCLUDE_DIRECTORIES (${CURSES_INCLUDE_DIR})

ADD_SUBDIRECTORY (src)

ADD_EXECUTABLE (roguelike ${SOURCES})

TARGET_LINK_LIBRARIES (roguelike ${CURSES_LIBRARIES})